CKA/Chapter11_Services/L12network policy/3_pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: netpol-demo
  labels:
    app: pod-a
spec:
  nodeName: master
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: netpol-demo
  labels:
    app: pod-b
spec:
  nodeName: worker
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: netpol-demo
  labels:
    app: pod-c
spec:
  nodeName: worker
  containers:
  - name: nginx
    image: nginx
